// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Avatar /> > Autoplay > renders a animated avatar 1`] = `
<span
  className="account__avatar account__avatar--loading"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    {
      "height": "100px",
      "width": "100px",
    }
  }
>
  <img
    alt=""
    onError={[Function]}
    onLoad={[Function]}
    src="/animated/alice.gif"
  />
</span>
`;

exports[`<Avatar /> > Still > renders a still avatar 1`] = `
<span
  className="account__avatar account__avatar--loading"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    {
      "height": "100px",
      "width": "100px",
    }
  }
>
  <img
    alt=""
    onError={[Function]}
    onLoad={[Function]}
    src="/static/alice.jpg"
  />
</span>
`;
